--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
     "rules": {
         "prettier/prettier":"error",
         "react-hooks/rules-of-hooks": "error",
+        "no-unused-vars":"warn",
         "react-hooks/exhaustive-deps": "warn",
             "import-helpers/order-imports": [
                 "warn",
